force-app/main/default/objects/Multireward_Billable_Events__c/Multireward_Billable_Events__c.object-meta.xml
<CustomObject>
    <label>Multireward Billable Event</label>
    <nameField>
        <label>Multireward Billable Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multireward Billable Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>