force-app/main/default/objects/Multireward_Billable_Events__c/fields/Adjust_Token__c.field-meta.xml
<CustomField>
    <fullName>Adjust_Token__c</fullName>
    <inlineHelpText>Use only if MMP is Adjust</inlineHelpText>
    <label>Adjust Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>