force-app/main/default/objects/Multireward_Billable_Events__c/fields/AG_Partner_Payout__c.field-meta.xml
<CustomField>
    <fullName>AG_Partner_Payout__c</fullName>
    <formula>IF(
ISBLANK(New_Rate_Adjustment__c),
Billable_Price_Per_Conversion__c  * 0.6,
New_Rate_Adjustment__c * 0.6
)</formula>
    <label>AG Partner Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>