force-app/main/default/objects/Multireward_Billable_Events__c/fields/Attribution_Tracking_Platform__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Tracking_Platform__c</fullName>
    <formula>TEXT(Campaign__r.Attribution_Tracking_Platform__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribution Tracking Platform</label>
    <type>Text</type>
</CustomField>