force-app/main/default/objects/Multireward_Billable_Events__c/fields/Billable_Price_Per_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Billable_Price_Per_Conversion__c</fullName>
    <label>Billable Price Per Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>