force-app/main/default/objects/Multireward_Billable_Events__c/fields/Incent_Network_Payout_Standard__c.field-meta.xml
<CustomField>
    <fullName>Incent_Network_Payout_Standard__c</fullName>
    <formula>IF(
ISBLANK(New_Rate_Adjustment__c),
Billable_Price_Per_Conversion__c  * 0.4,
New_Rate_Adjustment__c * 0.4
)</formula>
    <label>Incent Network Payout/Standard</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>