force-app/main/default/objects/Multireward_Billable_Events__c/fields/MMP_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>MMP_Event_Name__c</fullName>
    <inlineHelpText>This will be used as the event name in Tune.</inlineHelpText>
    <label>MMP Event Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>