force-app/main/default/objects/Multireward_Billable_Events__c/fields/New_Rate_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>New_Rate_Adjustment__c</fullName>
    <label>New Rate Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>